<resources>
    <string name="app_name">Estudos</string>
    <string name="label_exe606">606</string>
    <string name="label_exe607">607</string>
    <string name="title606">Exercício 606</string>
    <string name="btnFechar">Fechar</string>
    <string name="vendor_hint">Nome do Vendedor</string>
    <string name="percentage_hint">Percentual de Comissão</string>
    <string name="totalSale_hint">Total de Vendas</string>
    <string name="titleExe607">Exercício 607</string>
    <string name="btn_generate_numbers">Gerar Número</string>
</resources>