<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exe607Activity">

    <TextView
        style="@style/TextTitle"
        android:id="@+id/txt_title"
        android:text="@string/titleExe607"
         />

    <EditText
        style="@style/EditText"
        android:id="@+id/edit_number"
        android:inputType="numberSigned"
        android:hint="Digite um número Real"
         />

    <TextView
        style="@style/TextView"
        android:id="@+id/txt_numbers"
        tools:text="Numeros Gerados" />



    <Button
        style="@style/ButtonClose"
        android:id="@+id/btn_generate"
        android:text="@string/btn_generate_numbers"
         />



    <TextView
        style="@style/TextView"
        android:id="@+id/txt_quantNegativo"
        tools:text="Quantidade de números negativos" />

    <TextView
        style="@style/TextView"
        android:id="@+id/txt_quantSumPositive"
        tools:text="soma dos números positivos" />

    <Button
        android:id="@+id/btn_close607"
        style="@style/ButtonClose"

        android:text="@string/btnFechar"

        />

</LinearLayout>